--- a/magazine/templates/form/base.html
+++ b/magazine/templates/form/base.html
@@ -24,10 +24,10 @@
                 <a class="link-success" href="#">Subscribe</a>
             </div>
             <div class="col-4 text-center">
-                <a class="blog-header-logo text-dark" href="#">স্বপ্নউড়ান</a>
+                <a class="blog-header-logo text-dark" href="#">স্বব্দাশ্য</a>
             </div>
             <div class="col-4 d-flex justify-content-end align-items-center">
-                <a class="btn btn-sm btn-outline-danger" href="#">Sign up</a>
+                <a class="btn btn-sm btn-outline-danger" href="#">Subscribe Us</a>
             </div>
             </div>
         </header>
