--- a/magazine/templates/form/base.html
+++ b/magazine/templates/form/base.html
@@ -16,7 +16,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 </head>
 
-<body>
+<body style="background-color: rgb(238, 183, 147);">
     <div class="container" style="padding-top: 20px;">
         <header class="blog-header py-3">
             <div class="row flex-nowrap justify-content-between align-items-center">
@@ -24,7 +24,7 @@
                 <a class="link-success" href="#">Subscribe</a>
             </div>
             <div class="col-4 text-center">
-                <a class="blog-header-logo text-dark" href="#">স্বব্দাশ্য</a>
+                <a class="blog-header-logo text-dark" href="{% url 'index' %}">স্বব্দাশ্য</a>
             </div>
             <div class="col-4 d-flex justify-content-end align-items-center">
                 <a class="btn btn-sm btn-outline-danger" href="#">Subscribe Us</a>
