--- a/magazine/templates/form/base.html
+++ b/magazine/templates/form/base.html
@@ -21,13 +21,13 @@
         <header class="blog-header py-3">
             <div class="row flex-nowrap justify-content-between align-items-center">
             <div class="col-4 pt-1">
-                <a class="link-success" href="#">Subscribe</a>
+                <a class="link-success" href="{% url 'subs' %}">সাবস্ক্রাইব করুন</a>
             </div>
             <div class="col-4 text-center">
                 <a class="blog-header-logo text-dark" href="{% url 'index' %}">স্বব্দাশ্য</a>
             </div>
             <div class="col-4 d-flex justify-content-end align-items-center">
-                <a class="btn btn-sm btn-outline-danger" href="#">Subscribe Us</a>
+                <a class="btn btn-sm btn-outline-danger" href="{% url 'subs' %}">Subscribe Us</a>
             </div>
             </div>
         </header>
