--- a/magazine/templates/archives/spring.html
+++ b/magazine/templates/archives/spring.html
@@ -4,27 +4,11 @@
 
 <h2 class="display-1" style="text-align: center;">বসন্ত সংখ্যা</h2>
 
-{% comment %}
-
-<a href="#">২০২০</a>
-<br>
-<a href="#">২০২১</a>
-<br>
-<a href="#">২০২২</a>
-<br>
-<a href="#">২০২৩</a>
-<br>
-<a href="#">২০২৪</a>
-<br>
-<a href="#">২০২৫</a>
-<br>
-
-{% endcomment %}
 
 {% for all in Spring %}
 <div class="blog-post">
     <h2 class="blog-post-title">{{all.storyname}}</h2>
-    <p class="blog-post-meta"><strong>সাল :</strong> {{all.year}} || <a href="#">{{all.authorname}}</a></p>
+    <p class="blog-post-meta"><strong>সাল :</strong> {{all.year}} ||<strong> ধরণ :</strong> {{all.content_type}} <a href="#">{{all.authorname}}</a></p>
     <hr>
 
     <p>{{all.content|linebreaks}}</p>
