--- a/magazine/templates/form/base.html
+++ b/magazine/templates/form/base.html
@@ -21,13 +21,13 @@
         <header class="blog-header py-3">
             <div class="row flex-nowrap justify-content-between align-items-center">
             <div class="col-4 pt-1">
-                <a class="link-success" href="{% url 'subs' %}">সাবস্ক্রাইব করুন</a>
+                <a class="link-success" href="{% url 'subs' %}" target="_blank">সাবস্ক্রাইব করুন</a>
             </div>
             <div class="col-4 text-center">
-                <a class="blog-header-logo text-dark" href="{% url 'index' %}">স্বব্দাশ্য</a>
+                <a class="blog-header-logo text-dark" href="{% url 'index' %}" target="_blank">স্বব্দাশ্য</a>
             </div>
             <div class="col-4 d-flex justify-content-end align-items-center">
-                <a class="btn btn-sm btn-outline-danger" href="{% url 'subs' %}">Subscribe Us</a>
+                <a class="btn btn-sm btn-outline-danger" href="{% url 'subs' %} target="_blank"">Subscribe Us</a>
             </div>
             </div>
         </header>
@@ -37,7 +37,7 @@
     </div>
 
     <footer class="blog-footer">
-        <p>Blog template collected for a company, written by <a href="#">Soumyadeep Mondal</a>.</p>
+        <p>Blog template collected for a company, written by <a href="https://github.com/soumya-99" target="_blank">Soumyadeep Mondal</a>. <a href="https://soumya-99.github.io/Explore-India/" target="_blank">Click Here</a> here to show one of my sample website. Have a Great Day!</p>
         <p>
           <a href="#">Back to top</a>
         </p>
