--- a/magazine/templates/form/base.html
+++ b/magazine/templates/form/base.html
@@ -16,7 +16,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 </head>
 
-<body style="background-color: rgb(238, 183, 147);">
+<body style="background-color: rgb(147, 224, 238);">
     <div class="container" style="padding-top: 20px;">
         <header class="blog-header py-3">
             <div class="row flex-nowrap justify-content-between align-items-center">
@@ -24,17 +24,18 @@
                 <a class="link-success" href="{% url 'subs' %}" target="_blank">সাবস্ক্রাইব করুন</a>
             </div>
             <div class="col-4 text-center">
-                <a class="blog-header-logo text-dark" href="{% url 'index' %}" target="_blank">স্বব্দাশ্য</a>
+                <a class="blog-header-logo text-danger" href="{% url 'index' %}" target="_blank">স্বব্দাশ্য</a>
             </div>
             <div class="col-4 d-flex justify-content-end align-items-center">
-                <a class="btn btn-sm btn-outline-danger" href="{% url 'subs' %} target="_blank"">Subscribe Us</a>
+                <a class="btn btn-sm btn-outline-warning" href="{% url 'subs' %}" target="_blank">Subscribe Us</a>
             </div>
             </div>
         </header>
-        {% block content %}
-
-        {% endblock %}
     </div>
+    
+    {% block content %}
+
+    {% endblock %}
 
     <footer class="blog-footer">
         <p>Blog template collected for a company, written by <a href="https://github.com/soumya-99" target="_blank">Soumyadeep Mondal</a>. <a href="https://soumya-99.github.io/Explore-India/" target="_blank">Click Here</a> here to show one of my sample website. Have a Great Day!</p>
