--- a/magazine/templates/form/subscribe.html
+++ b/magazine/templates/form/subscribe.html
@@ -14,7 +14,7 @@
         <br>
         {{form.email|as_crispy_field}}
         <br>
-    </div>
+    
 
     <div class="row">
         <div class="col-md-8">
@@ -23,9 +23,10 @@
         <div class="col-md-4">
             <a href="{% url 'index' %}" class="btn btn-danger btn-block btn-lg">
                 <i class="fa fa-arrow-circle-o-left" aria-hidden="true"></i>
-                Go to Stories
+                Go to Home
             </a>
         </div>
+    </div>
     </div>
     <br><br>
     
