db changes into db.sqlite3

--- a/magazine/templates/essentials/index.html
+++ b/magazine/templates/essentials/index.html
@@ -40,7 +40,7 @@
 {% for all in Images|slice:"1" %}
   <div>
     <div style="align-items: center;">
-      <img src="{{all.img.url}}" alt="image" style="width: 100%;">
+      <img src="{{all.img.url}}" alt="image" style="width: 100%; height: auto;">
     </div>
   </div>
 {% endfor %}
