--- a/magazine/templates/form/base.html
+++ b/magazine/templates/form/base.html
@@ -14,9 +14,14 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+    <script src="{% static 'js/smooth-scroll.js' %}"></script>
 </head>
 
-<body style="background-color: rgb(147, 224, 238);">
+<script>
+    var scroll = new SmoothScroll('a[href*="#"]');
+</script>
+
+<body style="background-color: rgb(147, 224, 238); cursor: default;">
     <div class="container" style="padding-top: 20px;">
         <header class="blog-header py-3">
             <div class="row flex-nowrap justify-content-between align-items-center">
