--- a/magazine/templates/form/subscribe.html
+++ b/magazine/templates/form/subscribe.html
@@ -18,12 +18,12 @@
 
     <div class="row">
         <div class="col-md-8">
-            <button type="submit" class="btn btn-success btn-block btn-lg"><i class="fa fa-database" aria-hidden="true"></i> Submit</button>
+            <button type="submit" class="btn btn-success btn-block btn-lg"><i class="fa fa-database" aria-hidden="true"></i> জমা দিন</button>
         </div>
         <div class="col-md-4">
             <a href="{% url 'index' %}" class="btn btn-danger btn-block btn-lg">
                 <i class="fa fa-arrow-circle-o-left" aria-hidden="true"></i>
-                Go to Home
+                হোমে ফিরে যান
             </a>
         </div>
     </div>
