--- a/magazine/templates/archives/winter.html
+++ b/magazine/templates/archives/winter.html
@@ -9,7 +9,7 @@
 {% for all in Winter %}
 <div class="blog-post">
     <h2 class="blog-post-title">{{all.storyname}}</h2>
-    <p class="blog-post-meta"><strong>সাল :</strong> {{all.year}} ||<strong> ধরণ :</strong> {{all.content_type}}  <a href="#">{{all.authorname}}</a></p>
+    <p class="blog-post-meta"><strong>সাল :</strong> {{all.year}} ||<strong> ধরণ :</strong> {{all.content_type}}  <a href="{% url 'authpage' all.uniqueID %}">{{all.authorname}}</a></p>
     <hr>
 
     <p>{{all.content|linebreaks}}</p>
