--- a/magazine/templates/essentials/golpo.html
+++ b/magazine/templates/essentials/golpo.html
@@ -11,7 +11,7 @@
 
       <div class="blog-post">
         <h2 class="blog-post-title">{{all.storyname}}</h2>
-        <p class="blog-post-meta"><strong>সাল :</strong> {{all.year}} || <a href="#">{{all.authorname}}</a></p>
+        <p class="blog-post-meta"><strong>সাল :</strong> {{all.year}} || <a href="{% url 'authpage' all.uniqueID %}">{{all.authorname}}</a></p>
         <hr>
 
         <p>{{all.content|linebreaks}}</p>
