--- a/magazine/templates/archives/allauthors.html
+++ b/magazine/templates/archives/allauthors.html
@@ -4,10 +4,15 @@
 
 {% block content %}
 
+<h2 class="display-1" style="text-align: center;">লেখক/লেখিকা মন্ডল</h2>
+<hr>
+
 {% for all in AllAuths %}
 
-<a href="{% url 'authpage' all.uID %}">{{all.authName}}</a>
-<br>
+<div class="container" style="text-align: center;">
+    <br>
+    <h3><a href="{% url 'authpage' all.uID %}">{{all.authName}}</a></h3>
+</div>
 
 {% endfor %}
 
