--- a/magazine/templates/form/base.html
+++ b/magazine/templates/form/base.html
@@ -21,7 +21,7 @@
     var scroll = new SmoothScroll('a[href*="#"]');
 </script>
 
-<body style="cursor: default;">
+<body style="cursor: default; background-image: url({% static 'images/bgg.jpeg' %});">
     <div class="container" style="padding-top: 20px;">
         <header class="blog-header py-3">
             <div class="row flex-nowrap justify-content-between align-items-center">
@@ -29,7 +29,7 @@
                 <a class="link-success" href="{% url 'subs' %}" target="_blank">সাবস্ক্রাইব করুন</a>
             </div>
             <div class="col-4 text-center">
-                <a class="blog-header-logo text-danger" href="{% url 'index' %}" target="_blank" style="font-size: 3rem !important;">শব্দাশ্ব</a>
+                <a class="blog-header-logo text-danger" href="{% url 'index' %}" target="_blank" style="font-size: 3rem !important;"><img src="{% static 'images/sabdassho logo-01.png' %}" alt="logo" style="width: 23vw;"></a>
             </div>
             <div class="col-4 d-flex justify-content-end align-items-center">
                 <a class="btn btn-sm btn-outline-warning" href="{% url 'subs' %}" target="_blank">Subscribe Us</a>
